--- a/horario.html
+++ b/horario.html
@@ -13,22 +13,22 @@
             <td colspan="7">Horario de Atención</td>
 
         </tr>
-        <tr>
-        <td>Lunes</td>
-        <td>Martes</td>
-        <td>Miércoles</td>
-        <td>Jueves</td>
-        <td>Viernes</td>
-        <td>Sábado</td>
-        <td>Domingo</td>
+        <tr  style="font-size: 18px;">
+        <td style="color:aqua"><b>Lunes</b></td>
+        <td style="color:aqua"><b>Martes</b></td>
+        <td style="color:aqua"><b>Miércoles</b></td>
+        <td style="color:aqua"><b>Jueves</b></td>
+        <td style="color:aqua"><b>Viernes</b></td>
+        <td style="color:rgb(0, 255, 13)"><b>Sábado</b></td>
+        <td style="color:rgb(0, 255, 13)"><b>Domingo</b></td>
         </tr>
 
         <tr>
-            <td colspan="5">8hs a 20hs</td>
+            <td  style="color:aqua" colspan="5"><i>8hs a 20hs</i></td>
         
 
         
-            <td colspan="6,7">8hs a 13hs</td>
+            <td style="color:rgb(0, 255, 13)" colspan="6,7"><i>8hs a 13hs</i></td>
         </tr>
 
     </table>
